--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
             Deixe que Deus interprete.
         </p>
     </section>
-    <footer><p>Site criado por <a href="https://github.com/jFaccion" target="_blank" rel="external">João Faccion</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">CursoemVideo</p></a></footer>
+    <footer><p>Site criado por <a href="https://github.com/jFaccion" target="_blank" rel="external">João Faccion</a> para o <a href="https://www.cursoemvideo.com/" target="_blank" rel="external">CursoemVideo</p></a></footer>
 </body>
 </html>
